--- a/jq-special2-part2/style.css
+++ b/jq-special2-part2/style.css
@@ -13,9 +13,17 @@
   width:150px;
   left:275px;
   top:70px;
+}
 
+#employees li img{
 
- }
+  width: 20px;
+  height: 20px;
+}
+
+#employees li img.hidden{
+  display: none;
+}
 
  #todos
  {
@@ -123,7 +131,7 @@
 {
 height:20px;
 width:20px;
-
-
 }
+
+
  
