--- a/product-grid/style.css
+++ b/product-grid/style.css
@@ -7,14 +7,15 @@ div {
 
 }
 #products{
-	width: 1000px;
-	
+	width: 1000px;	
 	margin-left : 5%;
-	border: 1px solid;
-
 }
 
 img {
 	height: 100px;
 	width: 100px;
+}
+
+.hide{
+	display : none;
 }
